# api/internal/domain/user/handler/auth.handler.go
@@ -6,6 +6,7 @@ import (
 
 	serviceInterface "github.com/marceloamoreno/goapi/internal/domain/user/interface/service"
 	"github.com/marceloamoreno/goapi/internal/domain/user/service"
+	_ "github.com/marceloamoreno/goapi/internal/domain/user/usecase"
 	"github.com/marceloamoreno/goapi/internal/shared/response"
 )
 
@@ -26,6 +27,9 @@ func NewAuthHandler() *AuthHandler {
 // @Tags Auth
 // @Accept  json
 // @Produce  json
+// @Param auth body service.RequestLoginInputDTO true "User"
+// @Success 200 {object} response.Response{data=usecase.CreateAuthOutputDTO}
+// @Failure 400 {object} response.ResponseError{}
 // @Router /auth/login [post]
 func (h *AuthHandler) Login(w http.ResponseWriter, r *http.Request) {
 	output, err := h.service.Login(r.Body)
@@ -43,6 +47,9 @@ func (h *AuthHandler) Login(w http.ResponseWriter, r *http.Request) {
 // @Tags Auth
 // @Accept  json
 // @Produce  json
+// @Param auth body service.RequestRefreshTokenInputDTO true "User"
+// @Success 200 {object} response.Response{data=usecase.CreateAuthOutputDTO}
+// @Failure 400 {object} response.ResponseError{}
 // @Router /auth/refresh [post]
 func (h *AuthHandler) RefreshToken(w http.ResponseWriter, r *http.Request) {
 	output, err := h.service.RefreshToken(r.Body)
@@ -60,6 +67,9 @@ func (h *AuthHandler) RefreshToken(w http.ResponseWriter, r *http.Request) {
 // @Tags Auth
 // @Accept  json
 // @Produce  json
+// @Param auth body service.RequestForgotPasswordInputDTO true "User"
+// @Success 200 {object} response.Response{data=nil}
+// @Failure 400 {object} response.ResponseError{}
 // @Router /auth/forgot-password [post]
 func (h *AuthHandler) ForgotPassword(w http.ResponseWriter, r *http.Request) {
 	err := h.service.ForgotPassword(r.Body)
@@ -77,6 +87,9 @@ func (h *AuthHandler) ForgotPassword(w http.ResponseWriter, r *http.Request) {
 // @Tags Auth
 // @Accept  json
 // @Produce  json
+// @Param auth body service.RequestUpdateUserPasswordInputDTO true "User"
+// @Success 200 {object} response.Response{data=nil}
+// @Failure 400 {object} response.ResponseError{}
 // @Router /auth/update-password [post]
 func (h *AuthHandler) UpdateUserPassword(w http.ResponseWriter, r *http.Request) {
 	err := h.service.UpdateUserPassword(r.Body)
@@ -94,6 +107,9 @@ func (h *AuthHandler) UpdateUserPassword(w http.ResponseWriter, r *http.Request)
 // @Tags Auth
 // @Accept  json
 // @Produce  json
+// @Param auth body service.RequestVerifyUserInputDTO true "User"
+// @Success 200 {object} response.Response{data=nil}
+// @Failure 400 {object} response.ResponseError{}
 // @Router /auth/verify-user [post]
 func (h *AuthHandler) VerifyUser(w http.ResponseWriter, r *http.Request) {
 	err := h.service.VerifyUser(r.Body)
